Fixed no overlap in dice tray

--- a/src/app/dice-roller/dice-roller.component.scss
+++ b/src/app/dice-roller/dice-roller.component.scss
@@ -229,4 +229,5 @@
   padding: 0;
   vertical-align: baseline;
   font-family: system-ui, sans-serif;
+  position: relative;
 }
